--- a/api/package.json
+++ b/api/package.json
@@ -11,12 +11,16 @@
     "dev": "nodemon src/server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "date-fns": "^2.16.1",
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
     "prettier": "^2.2.1",
     "sequelize": "^6.3.5",
+    "youch": "^2.1.1",
     "yup": "^0.32.8"
   },
   "devDependencies": {
