--- a/api/package.json
+++ b/api/package.json
@@ -8,7 +8,7 @@
   "private": false,
   "license": "MIT",
   "scripts": {
-    "dev": "nodemon src/server.js"
+    "dev": "clear && nodemon src/server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
