--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.2",
     "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5",
     "youch": "^2.1.1",
     "yup": "^0.32.8"
