--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     ]
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.3",
     "axios": "^0.21.1",
     "react": "^17.0.1",
     "react-day-picker": "^7.4.10",
     "react-dom": "^17.0.1",
     "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-switch": "^6.0.0",
